[package]
name = "sorgo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-graphql = { version = "4.0", features = ["bson", "chrono"] }
chrono={version="0.4", features=["serde"]}
async-graphql-actix-web = "4.0"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
once_cell='1.17'
mongodb = "2.4.0"
env_logger = "0.8"
log = "0.4"
actix-cors = "0.6"
