[package]
name = "sorgo"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
async-graphql = { version = "4.0", features = ["bson", "chrono"] }
async-graphql-actix-web = "4.0"

chrono={version="0.4", features=["serde"]}
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
once_cell='1.17'
env_logger = "0.8"
rand = "0.8.5"
log = "0.4"
lettre = "0.10.1"
nanoid = "0.4.0"
uuid = { version = "1.2.2", features = [
    "fast-rng",
    "macro-diagnostics",
    "v4",
    "serde",
] }

#db
mongodb = "2.4.0"

thiserror = '1'
anyhow = "1"

# redis
deadpool-redis = { version = "0.9", features = ["serde"] }
redis = { version = "0.21" }

jwt-simple = "0.10"
hex = "0.4.3"
